# la3

./: .gitignore  CLAUDE.md  COMPILER_PLAN.md  Cargo.toml  DYNAMIC_STDLIB.md  LICENSE  README.md
.cargo/: config.toml
.claude/skills/la3-autopsy/: SKILL.md
.claude/skills/la3-fiscal/: SKILL.md
.claude/skills/la3-next/: SKILL.md
.claude/skills/la3-ship/: SKILL.md
.claude/skills/la3-spec/: SKILL.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json
editors/vscode/scripts/: bundle-binary.mjs
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: la3.tmLanguage.json
examples/: channels.la3  cli_args.la3  collections.la3  fib.la3  file_read.la3  fizzbuzz.la3  http_server.la3  json.la3  memory.la3  options.la3  shapes.la3  tls_record.la3  word_count.la3
examples/data/: poem.txt
runtime/: Cargo.toml
runtime/src/: bytes.rs  collections.rs  fmt.rs  fs.rs  io.rs  lib.rs  math.rs  os.rs  str.rs
src/: ast.rs  borrowck.rs  checker.rs  codegen.rs  diag.rs  hir.rs  interp.rs  lexer.rs  main.rs  mir.rs  mirgen.rs  parser.rs  ty.rs  typeck.rs
src/borrowck/: borrows.rs  moves.rs  support.rs
src/codegen/: driver.rs  fngen.rs  module.rs  runtime.rs  support.rs  tests.rs  types.rs  value.rs
src/interp/: builtins.rs  calls.rs  concurrency.rs  convert.rs  exprs.rs  loops.rs  matching.rs  stmts.rs
src/parser/: expr.rs  items.rs  pattern.rs  stmt.rs  types.rs
src/typeck/: builtins.rs  calls.rs  collect.rs  control.rs  driver.rs  infer.rs  layout.rs  relations.rs  stmts.rs
tests/: casts.rs  concurrency.rs  differential.rs  drops.rs  examples.rs  hir.rs  inference.rs  layout.rs  mir_lower.rs  mir_ownership.rs  ownership.rs  resolve.rs  typeck.rs
