[workspace]
members = ["runtime"]

[package]
name = "la3"
version = "0.1.0"
edition = "2024"
description = "Lexer, parser, checker, tree-walking interpreter, and (WIP) LLVM compiler for Laila Lang (La3)."
license = "MIT"
repository = "https://github.com/glazastov/la3"
readme = "README.md"

[[bin]]
name = "la3"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
